UIEH-1397: The list of packages is no longer cut off in the modal window. (#1697)

--- a/src/components/title/show/title-show.css
+++ b/src/components/title/show/title-show.css
@@ -1,3 +1,7 @@
 .add-to-custom-package-button {
   margin: 1rem 0 0;
 }
+
+.addTitleModalContent {
+  overflow: visible;
+}
